dataset1235/2025-2/1153765216/users/641768463/executions/2814675586_1319609354.log
== SUBMISSION (2025-08-26 18:37:59)
-- CODE: 
n1 = float(input())
n2 = float(input())
media = n1 + (n2//2)
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
6.2
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
14.0
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
14.0
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
11.8
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
6.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:38:05)
-- CODE: 
n1 = float(input())
n2 = float(input())
media = n1 + (n2//2)
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
6.2
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
14.0
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
14.0
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
11.8
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
6.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:39:16)
-- CODE: 
n1 = float(input())
n2 = float(input())
media = n1 + n2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
19.0
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
18.8
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
15.0
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
16.2
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:39:32)
-- CODE: 
n1 = float(input())
n2 = float(input())
media = n1 + n2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
19.0
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
18.8
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
15.0
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
16.2
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:38:34)
-- CODE: 
n1 = int(input())
n2 = int(input())
media = n1 + (n2/2)
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input())
         ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '4.2'
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input())
         ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.0'
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input())
         ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.0'
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input())
         ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '7.5'
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input())
         ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '7.8'
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input())
         ^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '4.8'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:40:46)
-- CODE: 
n1 = float(input())
n2 = float(input())
media = n1 + n2
media1 = media/2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
19.0
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
18.8
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
15.0
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
16.2
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:57:28)
-- CODE: 
n1 = float(input())
n2 = float(input())
media = n1 + n2
media1 = media/2
print (media1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
5.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
9.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
9.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
7.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
8.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:39:52)
-- CODE: 
n1 = float(input())
n2 = float(input())
media = n1 + n2/2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
7.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
14.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
14.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
11.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
12.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
7.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:37:49)
-- CODE: 
n1 = float(input())
n2 = float(input())
media = n1 + (n2//2)
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
6.2
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
14.0
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
14.0
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
11.8
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
6.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:24:08)
-- CODE: 
n1 = float(input())
n2 = float(input())
media = n1 + n2
print (media1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (media1)
           ^^^^^^
NameError: name 'media1' is not defined. Did you mean: 'media'?
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (media1)
           ^^^^^^
NameError: name 'media1' is not defined. Did you mean: 'media'?
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (media1)
           ^^^^^^
NameError: name 'media1' is not defined. Did you mean: 'media'?
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (media1)
           ^^^^^^
NameError: name 'media1' is not defined. Did you mean: 'media'?
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (media1)
           ^^^^^^
NameError: name 'media1' is not defined. Did you mean: 'media'?
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (media1)
           ^^^^^^
NameError: name 'media1' is not defined. Did you mean: 'media'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:57:26)
-- CODE: 
n1 = float(input())
n2 = float(input())
media = n1 + n2
media1 = media/2
print (media1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
5.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
9.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
9.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
7.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
8.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:41:18)
-- CODE: 
n1 = float(input())
n2 = float(input())
media = n1 + n2
media1 = media/2
print (media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
19.0
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
18.8
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
15.0
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
16.2
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:38:02)
-- CODE: 
n1 = float(input())
n2 = float(input())
media = n1 + (n2//2)
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
6.2
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
14.0
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
14.0
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
10.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
11.8
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
6.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
